# BugViper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile.api  Dockerfile.api.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore  Dockerfile.ingestion.dockerignore  Dockerfile.lint  Dockerfile.lint.dockerignore  Dockerfile.review  Dockerfile.review.dockerignore  README.md  SETUP.md  cloudbuild.frontend.yaml  cloudbuild.lint.yaml  cloudbuild.review.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml  review.md  start.sh
api/: app.py  dependencies.py
api/agent/: context.py  graph.py  tools.py  utils.py
api/middleware/: firebase_auth.py
api/models/: ast_results.py  chat.py  rag.py  schemas.py  semantic.py
api/routers/: auth.py  ingestion.py  query.py  rag.py  repository.py  support.py  webhook.py
api/services/: cloud_tasks_service.py  code_review_commands.py  context_builder.py  firebase_service.py  github_service.py  lint_service.py  parse_file_to_ast.py  rag_service.py  review_service.py
api/utils/: comment_formatter.py  graph_context.py
apps/frontend/: next.config.ts  package-lock.json  package.json
code_review_agent/: agent_executor.py  agentic_pipeline.py  app.py  config.py
code_review_agent/agent/: graph.py  review_agent.py  review_graph.py  review_prompt.py  runner.py  state.py  tools.py  utils.py
code_review_agent/models/: agent_schemas.py  file_review.py
code_review_agent/nagent/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  example.py  example_3node.py  ngraph.py  nprompt.py  nrunner.py  nstate.py  ntools.py  pipeline_integration.py  plan.md
common/: __init__.py  chat_history.py  config_manager.py  debug_log.py  diff_line_mapper.py  diff_parser.py  embedder.py  firebase_models.py  github_client.py  job_models.py  job_tracker.py  languages.py  tree_sitter_manager.py
db/: __init__.py  client.py  code_serarch_layer.py  queries.py  schema.py
deepagent/agent/: review_pipeline.py
e2b-templates/: README.md  build_large.py  build_linter.py  build_small.py  template_large.py  template_linter.py  template_small.py
frontend/lib/: api.ts
infra/cloudbuild/: cloudbuild.api.yaml  cloudbuild.frontend.yaml  cloudbuild.ingestion.yaml  cloudbuild.lint.yaml  cloudbuild.review.yaml
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.lint  (+2 more)
ingestion_service/: app.py
lint_service/: app.py  runners.py
scripts/: migrate_analytics.py  seed_demo_data.py
tests/: test_call_graph.py  test_comment_formatter.py  test_judge.py  test_orchestrator_judge.py  test_pr_context_slice.py  test_safe_chat.py  test_summary_judgment.py
(+207 files in other folders)
