[project]
name = "BugViper"
version = "0.1.0"
description = "Code Review Tool - Repository Ingestion Engine with Tree-sitter and Neo4j"
requires-python = ">=3.13"
authors = [
    {name = "Code Review Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # Database
    "neo4j>=6.0.3",
    # Environment
    "python-dotenv>=1.2.1",
    # Tree-sitter core and language parsers
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
    # Config file parsing
    "pyyaml>=6.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    # File handling and patterns
    "pathspec>=0.12.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.16.0",
    # API dependencies
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "gunicorn>=25.0.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "githubkit>=0.13.0",
    # Agent dependencies
    "openai>=2.15.0",
    # HTTP client (for inter-service calls in local dev)
    "httpx>=0.27.0",
    # Firebase
    "firebase-admin>=6.6.0",
    # Google Cloud Tasks (for async ingestion dispatch)
    "google-cloud-tasks>=2.16.0",
    "langgraph>=1.0.10",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    # pydantic-ai imports from griffe; v2.0 renamed the module — pin to 1.x
    "griffe>=0.38.0,<2.0.0",
    "openrouter>=0.7.11",
    "defusedxml>=0.7.1",
    # Sandboxed DeepAgent code review (e2b + deepagents)
    "e2b>=1.0.0",
    "langchain-e2b>=0.0.4",
    "deepagents>=0.2.0",
    "black>=26.1.0",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0", 
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[project.urls]
Homepage = "https://github.com/Pavel401/BugViper"
Repository = "https://github.com/Pavel401/BugViper"
Issues = "https://github.com/Pavel401/BugViper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
    "src/code_review_agent",
    "src/common",
    "src/db",
    "src/ingestion_service",
    "src/lint_service",
    "src/ncodereview",
]


